--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,24 @@
-<p>
-  login works!
-</p>
+<div class="signin-content">
+    <mat-card>
+        <mat-card-content>
+            <!-- <img src="assets/img/logo.svg" class="angular-logo"> -->
+            <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                <mat-input-container class="full-width-input">
+                    <input matInput placeholder="User" formControlName="userName" required>
+                    <mat-error *ngIf="isFieldInvalid('userName')">
+                    Please inform your user name
+                    </mat-error>
+                </mat-input-container>
+
+                <mat-input-container class="full-width-input separate">
+                    <input matInput type="password" placeholder="Password" formControlName="password" required>
+                    <mat-error *ngIf="isFieldInvalid('userName')">
+                    Please inform your password
+                    </mat-error>
+                </mat-input-container>
+
+                <button mat-raised-button color="primary" type="submit">Login</button>
+            </form>
+        </mat-card-content>
+    </mat-card>
+</div>
