Respaldo, ventanas modales.

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -43,7 +43,7 @@
               </mat-list-item>
           </a>
 
-          <mat-list-item (click)="onLogout()">
+          <mat-list-item (click)="openDialog()">
               <mat-icon mat-list-icon>exit_to_app</mat-icon>
               <div fxFlex="10"></div>
               <div *ngIf="sidenavWidth > 6" class="sidebar-item">
