Logout con confirm dialog.

--- a/src/app/auth/dialogs/logout/logout.component.html
+++ b/src/app/auth/dialogs/logout/logout.component.html
@@ -1,6 +1,8 @@
 <h1 mat-dialog-title>{{data.title}}</h1>
 
-<mat-dialog-content>{{data.message}}</mat-dialog-content>
+<mat-dialog-content>
+    {{data.message}}
+</mat-dialog-content>
 
 <mat-dialog-actions>
     <button mat-button (click)="onNoClick()">Cancel</button>
