Nuevo diseño (rechazado).

--- a/src/app/components/modules/person/person.component.css
+++ b/src/app/components/modules/person/person.component.css
@@ -2,10 +2,30 @@
 .table-container {
     display: flex;
     flex-direction: column;
-    max-height: 500px;
-    min-width: 300px;
+    height: 70vh;
     position: relative;
-    width: 700px;
+    width: 85vw;
+}
+
+mat-toolbar {
+    height: 20vh;
+    width: 85vw;
+    margin-left: 0 !important;
+}
+
+.add-button {
+    position:fixed;
+    top: 20vh;
+    right:10vw;
+    color:#FFF;
+    border-radius:50px;
+    text-align:center;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 2;
+}
+
+.container {
+    width: 90vw !important;
 }
 
 .table-header {
@@ -54,25 +74,4 @@
 .mat-form-field {
     font-size: 14px;
     width: 100%;
-}
-
-mat-toolbar {
-    height: 200px;
-    min-width: 300px;
-    width: 1000px;
-}
-
-.container {
-}
-
-.add-button {
-    position:fixed;
-    width:60px;
-    height:60px;
-    bottom:40px;
-    right:40px;
-    color:#FFF;
-    border-radius:50px;
-    text-align:center;
-    box-shadow: 2px 2px 3px #999;
 }
