--- a/src/app/components/modules/person/person.component.html
+++ b/src/app/components/modules/person/person.component.html
@@ -1,5 +1,7 @@
+<mat-toolbar color="accent">Persons</mat-toolbar>
+
 <div class="container">
-    <button mat-fab color="accent" class="add-button">
+    <button mat-fab color="primary" class="add-button">
         <mat-icon>add</mat-icon>
     </button>
 
