--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,3 +1,8 @@
-<button mat-icon-button class="menu">
+<!-- <button mat-icon-button class="menu" (click)="sidenav.opened = !sidenav.opened">
     <mat-icon>menu</mat-icon>
-</button>
+</button> -->
+
+<mat-toolbar color="primary" class="menu">
+  <button mat-icon-button (click)="sidenav.toggle()"><mat-icon>menu</mat-icon></button>
+  <span>mat-sidenav-menu Demo</span>
+</mat-toolbar>
