--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -3,8 +3,9 @@
     height: 100vh;
     align-items: center;
     justify-content: left !important;
-    margin-left: 60px !important;
+    margin-left: 0px !important;
     margin-right: 30px;
+    margin-top: 0 !important;
 }
 
 .sidebar{
