--- a/src/app/components/modules/person/person.component.html
+++ b/src/app/components/modules/person/person.component.html
@@ -11,7 +11,7 @@
         </div>
 
         <div class="table-header">
-            <mat-form-field>
+            <mat-form-field class="search-bar">
                 <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
             </mat-form-field>
         </div>
