--- a/src/app/components/modules/person/person.component.html
+++ b/src/app/components/modules/person/person.component.html
@@ -1,8 +1,8 @@
 <div class="container">
 
-    <mat-toolbar color="accent"></mat-toolbar>
+    <mat-toolbar color="accent" mat-elevation-z2></mat-toolbar>
 
-    <div class="table-container mat-elevation-z1">
+    <div class="table-container mat-elevation-z10">
         <button mat-fab color="primary" class="add-button">
             <mat-icon>add</mat-icon>
         </button>
