Correccion de la vista movil (Eliminación de un espacio en blanco).

--- a/src/app/components/modules/person/person.component.html
+++ b/src/app/components/modules/person/person.component.html
@@ -12,8 +12,8 @@
         </div>
 
         <div class="table-header">
-            <mat-form-field class="search-bar">
-                <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+            <mat-form-field class="search-bar" color="primary">
+                <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter" class="filter">
             </mat-form-field>
         </div>
 
