--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,5 +1,5 @@
 <div class="container" [class.is-mobile]="mobileQuery.matches">
-    <mat-toolbar class="toolbar" class="mat-elevation-z10" mat-elevation-z10 color="accent">
+    <mat-toolbar class="toolbar" color="accent">
         <button mat-icon-button (click)="snav.toggle()">
             <mat-icon class="menu">menu</mat-icon>
         </button>
@@ -25,14 +25,14 @@
         </button> -->
     </mat-toolbar>
 
-    <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
-        <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"[fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+    <mat-sidenav-container class="sidenav-container">
+        <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"[fixedInViewport]="mobileQuery.matches">
             <mat-nav-list>
                 <a mat-list-item routerLink="/users">
-                    <i class="material-icons">people</i>&nbsp;Users
+                    <i class="material-icons side">people</i>&nbsp;Users
                 </a>
                 <a mat-list-item routerLink="/people">
-                    <i class="material-icons">contacts</i>&nbsp;People
+                    <i class="material-icons side">contacts</i>&nbsp;People
                 </a>
             </mat-nav-list>
         </mat-sidenav>
