Revert "Correccion de la vista movil (Eliminación de un espacio en blanco)."
This reverts commit 935c5059854535ddc1cfa88b3ad96e15b77dbade.

--- a/src/app/components/modules/person/person.component.css
+++ b/src/app/components/modules/person/person.component.css
@@ -2,7 +2,7 @@
 .table-container {
     display: flex;
     flex-direction: column;
-    /*height: 80vh;*/
+    height: 80vh;
     position: relative;
     width: 80vw;
     margin-top: 5vh;
@@ -81,4 +81,8 @@ mat-toolbar {
 .mat-form-field {
     font-size: 14px;
     width: 100%;
+}
+
+::placeholder; {
+    color: white;
 }
