Nueva estructura de carpetas, Funcionan: Sesiones, Vista de personas y eliminación de personas, falta: agregar y modificar.

--- a/src/app/modules/admin-layout/admin-layout.component.html
+++ b/src/app/modules/admin-layout/admin-layout.component.html
@@ -1,17 +1,16 @@
 <div class="container" [class.is-mobile]="mobileQuery.matches">
-    <mat-toolbar class="toolbar" class="mat-elevation-z10" mat-elevation-z10 color="accent">
+    <mat-toolbar class="toolbar" color="accent">
+        
         <button mat-icon-button (click)="snav.toggle()">
             <mat-icon class="menu">menu</mat-icon>
         </button>
         
         <h1 class="menu">Angular-CRUD</h1>
-        
         <span class="spacer"></span>
 
         <!-- <button mat-icon-button>
             <i class="material-icons menu">notifications</i>
         </button>
-
         <button mat-icon-button>
             <i class="material-icons menu">message</i>
         </button> -->
