--- a/src/app/components/confirm/confirm.component.html
+++ b/src/app/components/confirm/confirm.component.html
@@ -6,6 +6,6 @@
 <br/>
 
 <mat-dialog-actions>
+    <button mat-button [mat-dialog-close]="false">Cancelar</button>
     <button mat-button [mat-dialog-close]="true">Si</button>
-    <button mat-button (click)="onNoClick()">Cancel</button>
 </mat-dialog-actions>
