--- a/src/app/modules/admin-layout/admin-layout.component.html
+++ b/src/app/modules/admin-layout/admin-layout.component.html
@@ -25,12 +25,12 @@
     </mat-toolbar>
 
     <mat-sidenav-container class="sidenav-container">
-        <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"[fixedInViewport]="mobileQuery.matches">
+        <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'push'"[fixedInViewport]="mobileQuery.matches">
             <mat-nav-list>
-                <a mat-list-item routerLink="/users">
+                <a mat-list-item routerLink="/">
                     <i class="material-icons">people</i>&nbsp;Users
                 </a>
-                <a mat-list-item routerLink="/people">
+                <a mat-list-item routerLink="/contact-us">
                     <i class="material-icons">contacts</i>&nbsp;People
                 </a>
             </mat-nav-list>
