--- a/src/app/modules/person/person.component.html
+++ b/src/app/modules/person/person.component.html
@@ -61,8 +61,6 @@
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
-
-        <mat-paginator [length]="resultsLength" [pageSize]="pageSize">
-        </mat-paginator>
+        <mat-paginator [length]="resultsLength" [pageSize]="pageSize"></mat-paginator>
     </div>
 </div>
