--- a/src/app/modules/admin-layout/admin-layout.component.html
+++ b/src/app/modules/admin-layout/admin-layout.component.html
@@ -8,20 +8,20 @@
         <h1 class="menu">Angular-CRUD</h1>
         <span class="spacer"></span>
 
-        <!-- <button mat-icon-button>
+        <button mat-icon-button>
             <i class="material-icons menu">notifications</i>
         </button>
         <button mat-icon-button>
             <i class="material-icons menu">message</i>
-        </button> -->
+        </button>
 
         <button mat-icon-button [matMenuTriggerFor]="profileMenu">
             <i class="material-icons menu">person_pin</i>
         </button>
         
-        <!-- <button mat-icon-button>
+        <button mat-icon-button>
             <i class="material-icons menu">settings</i>
-        </button> -->
+        </button>
     </mat-toolbar>
 
     <mat-sidenav-container class="sidenav-container">
