Recupera token de sesión del backend.

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="signin-content">
+<div class="signin-content animated fadeIn">
     <mat-card>
         <mat-card-content>
             <!-- <img src="assets/img/logo.svg" class="angular-logo"> -->
