--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="example-container mat-elevation-z8">
+<div class="example-container mat-elevation-z8 animated fadeIn">
   <mat-table #table [dataSource]="dataSource">
     
     <!-- Position Column -->
