--- a/src/app/modules/admin-layout/admin-layout.component.html
+++ b/src/app/modules/admin-layout/admin-layout.component.html
@@ -1,4 +1,4 @@
-<div class="container" [class.is-mobile]="mobileQuery.matches">
+<div class="container animated fadeIn" [class.is-mobile]="mobileQuery.matches">
     <mat-toolbar class="toolbar" color="accent">
         
         <button mat-icon-button (click)="snav.toggle()">
@@ -23,15 +23,19 @@
             <i class="material-icons menu">settings</i>
         </button>
     </mat-toolbar>
-
     <mat-sidenav-container class="sidenav-container">
-        <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'push'"[fixedInViewport]="mobileQuery.matches">
+        <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"[fixedInViewport]="mobileQuery.matches">
             <mat-nav-list>
                 <a mat-list-item routerLink="/">
-                    <i class="material-icons">people</i>&nbsp;Users
+                    <i class="material-icons">person</i>&nbsp;Personas
                 </a>
+
                 <a mat-list-item routerLink="/contact-us">
-                    <i class="material-icons">contacts</i>&nbsp;People
+                    <i class="material-icons">email</i>&nbsp;Contactanos
+                </a>
+
+                <a mat-list-item routerLink="/table">
+                    <i class="material-icons">web</i>&nbsp;Tablas
                 </a>
             </mat-nav-list>
         </mat-sidenav>
