--- a/src/app/modules/person/person.component.html
+++ b/src/app/modules/person/person.component.html
@@ -1,6 +1,9 @@
-<div class="container">
-    <!-- <mat-toolbar color="accent" mat-elevation-z2></mat-toolbar> -->
+<div *ngIf="isLoadingResults">
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+</div>
 
+<div class="container animated fadeIn">
+    <!-- <mat-toolbar color="accent" mat-elevation-z2></mat-toolbar> -->
     <div class="table-container mat-elevation-z5">
         <button mat-fab color="primary" class="add-button">
             <mat-icon>add</mat-icon>
