--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,41 @@
 body {
     margin: 0 !important;
 }
+
+/*//////////////// --> ANIMACIONES <-- //////////////////////////*/
+.animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.fadeIn {
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;
+}
+
+svg path,
+svg rect{
+    fill: black;
+}
