--- a/src/app/modules/person/forms/forms.component.html
+++ b/src/app/modules/person/forms/forms.component.html
@@ -1,3 +1,35 @@
-<p>
-  forms works!
-</p>
+<h1 mat-dialog-title> {{ data.title }}</h1>
+<mat-dialog-content>
+    <div class="container">
+        <form [formGroup]="frm" (ngSubmit)='save(frm)' class="person-form">
+            <mat-form-field hintLabel="Max 10 characters">
+                <input matInput placeholder="Nombre" formControlName="name" class="person-input">
+                <mat-hint align="end">{{frm.controls.name.value?.length || 0}}/10</mat-hint>
+                <mat-error *ngIf="frm.controls.name.invalid">{{getErrorMessage()}}</mat-error>
+            </mat-form-field>
+            <br/>
+            <mat-form-field>
+                <input matInput type="number" formControlName='age'>
+                <mat-hint align="end">{{frm.controls.age.value?.length || 0}}/10</mat-hint>
+                <mat-error *ngIf="frm.controls.age.invalid">{{getErrorMessage()}}</mat-error>
+            </mat-form-field>
+            <br/>
+            <mat-radio-group formControlName='gender'>
+                <mat-radio-button value="Femenino">Femenino</mat-radio-button>
+                <mat-radio-button value="Masculino">Masculino</mat-radio-button>
+                <mat-error *ngIf="frm.controls.gender.invalid">{{getErrorMessage()}}</mat-error>
+            </mat-radio-group>
+            <br/>
+            <mat-form-field style="visibility: hidden;">
+                <input matInput type="text" formControlName='personid'>
+            </mat-form-field>
+            <div class="button-row">
+                <button mat-raised-button color="primary" type="submit" class="btnSave" [disabled]="!frm.valid">
+                    <mat-icon aria-label="icon-button">save </mat-icon>
+                    <span>Guardar</span>
+                </button>
+                <button mat-button [mat-dialog-close]>Cancelar</button>
+            </div>
+        </form>
+    </div>
+</mat-dialog-content>
