--- a/src/app/modules/person/person.component.html
+++ b/src/app/modules/person/person.component.html
@@ -1,14 +1,14 @@
 <div class="container animated fadeIn">
     <!-- <mat-toolbar color="accent" mat-elevation-z2></mat-toolbar> -->
     <div class="table-container mat-elevation-z5">
-        <button mat-fab color="primary" class="add-button">
+        <button mat-fab color="primary" class="add-button" (click)="save(row)">
             <mat-icon>add</mat-icon>
         </button>
     
         <div class="table-loading-shade" *ngIf="isLoadingResults">
             <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
         </div>
-
+        
         <div class="table-header">
             <mat-form-field class="search-bar">
                 <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
