Agregada la fuente 'Roboto', agregados estilos al formulario de agregar y editar personas, agregada imagen en el login, limpieza de código. Separación de los mensajes de error en el formulario de agregar y editar persona.

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="signin-content animated fadeIn">
     <mat-card>
         <mat-card-content>
-            <!-- <img src="assets/img/logo.svg" class="angular-logo"> -->
+            <img src="../../../assets/img/1.png" width="200px">
             <form [formGroup]="form" (ngSubmit)="onSubmit()">
                 <mat-input-container class="full-width-input">
                     <input matInput placeholder="User" formControlName="userName" required>
