Correccion del boton cerrar sesion

--- a/src/app/modules/admin-layout/admin-layout.component.html
+++ b/src/app/modules/admin-layout/admin-layout.component.html
@@ -56,5 +56,5 @@
 
 <!--USER PROFILE MENU-->
 <mat-menu #profileMenu="matMenu">
-    <button mat-button (click)="openDialog()">Logout</button>
+    <button mat-button (click)="openDialog()">Cerrar sesión</button>
 </mat-menu>
