Mejoras en la vista tabla

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="example-container mat-elevation-z8 animated fadeIn">
-  <mat-table #table [dataSource]="dataSource">
+<div class="animated fadeIn">
+  <mat-table #table [dataSource]="dataSource" class="mat-elevation-z20">
     
     <!-- Position Column -->
     <ng-container matColumnDef="position">
