--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -7,7 +7,7 @@
 
 .mat-table {
   overflow: auto;
-  max-height: 500px;
-  max-width: 800px;
-  width: 800px;
+  height: 75vh;
+  width: 80vw;
+  margin:5vh auto 9vh auto!important;
 }
